--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,9 +2,10 @@
 <html lang="en" xmlns:th="http:/>/www.thymeleaf.org/"/>
 <head>
     <meta charset="UTF-8"/>
-    <title></title>
+    <title>RewardsApp</title>
 </head>
 <body>
-
+<div id="react"></div>
+<script src="built/bundle.js"></script>
 </body>
 </html>
